[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "hailx"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[tool.maturin]
bindings = "pyo3"
module-name = "hailx_list"
python-packages = ["hailx"]
